@@ -1,6 +1,6 @@
 AUX kitty-0.14.3-flags.patch 1861 BLAKE2B 114df2ee2764f6ffc48ab99574f0f0e6192466fd195d06db090207c31cf40e3ad826c73f7d923a8bbf118f95683af92b1a5ab6ac55768ba73024c71e1a55f9b2 SHA512 42908cd0a0bffc1b036210d29d1143559653ccaf4f06210b15225f0f1b1328d77882afd73d3b3c23a5e233daf384479a35340558ddc6d60a8d3bda6c5bff451e
 AUX kitty-0.14.3-svg-icon.patch 678 BLAKE2B 388e3ccb4658d3c6a1d2e69bcda1ba032c34e722f2fea685c541d5ea61b8410e34097f1035870b411d8c0cf75ef29270b9a80d651f95c83c8808c553b3642b97 SHA512 0037603f123f553afc2ab2cafdcc2c2e5fdcf1e90f90c2fa2c40d862f217f49d1fdc1c4e6ffe7af127d32dfcb15cada7c51bfbc6f109fd50fc805b96ceefb96a
 DIST kitty-0.14.3.tar.xz 2939980 BLAKE2B 1c79492f19a220f5f2ff3fb2d6f7302aa39606cda638483a80ab0ad80f089053b6803981d74f831c0d0f2b6b095fdf1f54a1cae39d44b848db06ea339ab33d87 SHA512 bf0c725b111dfc8fb356b85698f660ad048dd677cf57dab43537fb4340b822a1f73c5b25b1bb980aa4284502f328069e73f79ac6bef7187395c4fc9daeff3a0f
-EBUILD kitty-0.14.3.ebuild 2068 BLAKE2B 3b1d912158d5812102e4c5b1781ea1f2036e6ea00a9bc5692ed73015ca5adbe6bb38e786ff993c8bc0e0797083fcf5799f8c449e3117812ddb539dadfda6cc8c SHA512 13625925c74fdc43393e2022d67dc07c977be9a92946864f8bf3b07ab987754178a94db5bdf821024108bf5fb0499130fa38ce712437911546fc3ac89bb63ebe
-MISC ChangeLog 206 BLAKE2B d1712f08bba515b326b684a36acd4247dc7bcf31311c3e1d4df4d9ae72eb0d1e311c2b34ee6944c9cd85c88f6ce5e74a365a148434985840aeb84f77dcbaf914 SHA512 fe847c1d6fcc6180bce8413d6e4d9a47d8d03e97e9711976cd4b4c3f8a5f46cd6a2791271f1864f80059c82078c0465409bb5bf764d4fc7400046e817be2250b
+EBUILD kitty-0.14.3.ebuild 2080 BLAKE2B 7eab41b849eb101cf0f80df7ced2ccab79e9f1df6cae27987124f80e9e5813ee97b7207631232ffb17821282ed68c94f90617d9dfc3d8f116020d1c55d3c50aa SHA512 1a77035416456132d9d2af6e9bc694c0952acc8e8d1f8794c54b4ddb4573f673d1c5650a161c54d96abbd1211df69d9ec3ce77d16175766c820199b275d9f226
+MISC ChangeLog 292 BLAKE2B b47faad26d4609bc6c4740252d06195af4dfcbc177d27fb5d81ff776645da55b52a55deef299a729b0c33cbc044596c21a0b57c62097eaa5ac2e4429ef47a935 SHA512 362315b91c4034d795264d29b793c6cc95eb97cda5ed5f6d266665dfb9f375927723c01d6c21018b19e1c9cfd43bcf1f5bb3913c80e2fb4ff2f10464c03028e2
 MISC metadata.xml 428 BLAKE2B 961cd7fc3036c8f5a641cb97de57765c423f157430bf1fd68ce7febf24713ab1b15080e03f568d20f6360da467044ea4ed1d3ee7bfb132250951b4239df58980 SHA512 49ffa8dee6be29ab8adacbc0717dc574ad15f690fa1e0726b2a9de439f90867d3770e3628734d9a7457aa45896334d96f15a51e217ad248c766271aa62d85061
